# dpdk-ffi

./: Cargo.toml  README.md
capsule-ffi/src/: bindings.h  shim.c
capsule/src/: lib.rs
capsule/src/dpdk/: mbuf.rs  mempool.rs  memring.rs  memzone.rs  mod.rs  port.rs  rtering.rs
examples/: Cargo.toml
examples/basic-demo/: Cargo.toml
examples/basic-demo/src/: main.rs
examples/mp-server/: Cargo.toml  mp-server.toml
examples/mp-server/src/: constants.rs  main.rs  onvm_nf.rs
examples/toy-onvm/: Cargo.toml
examples/toy-onvm/src/: constants.rs  main.rs  structs.rs
