[package]
name = "basic_demo"
version = "0.1.0"
authors = ["ratnadeepb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capsule-ffi = {path = "../../capsule-ffi"}
capsule = {path = "../../capsule"}
# dpdk-ffi = { path = "../dpdk-ffi" }
